# analisador-de-pdfs

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/prompts/: answer_format.py  extraction_format.py  question_format.py  response_format.py
backend/schemas/: __init__.py  extraction.py  final_answer.py  openai_schema.py  query_rewrite.py
backend/services/: document_qa_service.py  gemini_agent.py  langextract_service.py  openai_agent.py  openai_extraction_service.py  parser_query_rewriter.py  pdf_extractor.py  query_rewriter.py  token_usage.py
backend/services/interfaces/: agent_interface.py
frontend/: app.py
tests/: test_document_qa_service.py  test_final_answer_schema.py  test_gemini_agent.py  test_langextract_service.py  test_openai_agent.py  test_openai_extraction_service.py  test_openai_schema.py  test_parse_rewriter.py  test_pdf_extractor.py  test_query_rewriter.py  test_token_usage.py
