[project]
name = "teste-tecnico-active-bi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.0.1",
    "langextract>=1.3.0",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
    "streamlit>=1.57.0",
]
